kubernetes/apps/zammad/app/scheduler-recovery-system.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zammad-scheduler-recovery
  namespace: default
  labels:
    app.kubernetes.io/name: zammad
    app.kubernetes.io/component: scheduler-recovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: zammad
      app.kubernetes.io/component: scheduler-recovery
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zammad
        app.kubernetes.io/component: scheduler-recovery
    spec:
      serviceAccountName: zammad-recovery-system
      containers:
        - name: recovery-system
          image: python:3.13-alpine
          command:
            - /bin/sh
            - -c
            - |
              [...]
          resources:
            requests:
              cpu: 5m
              memory: 32Mi
            limits:
              cpu: 20m
              memory: 64Mi
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
