kubernetes/apps/zammad/app/servicemonitor.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: zammad-scheduler-metrics
  namespace: default
  labels:
    app.kubernetes.io/name: zammad
    app.kubernetes.io/component: zammad-scheduler
spec:
  selector:
    app.kubernetes.io/name: zammad
    app.kubernetes.io/component: zammad-scheduler
  ports:
    - name: metrics
      port: 9090
      targetPort: 9090
      protocol: TCP
  type: ClusterIP
