kubernetes/apps/zammad/app/ingress-int.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zammad-int
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For"
  labels:
    app.kubernetes.io/instance: zammad
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: zammad
    helm.sh/chart: zammad-12.4.1
    helm.toolkit.fluxcd.io/name: zammad
    helm.toolkit.fluxcd.io/namespace: default
spec:
  ingressClassName: internal
  rules:
    - host: support.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: zammad-nginx
                port:
                  number: 8080
  tls:
    - hosts:
        - support.${SECRET_DOMAIN}
      secretName: support.${SECRET_DOMAIN}-tls
